--- a/misc/supervisord.ini
+++ b/misc/supervisord.ini
@@ -1,8 +1,8 @@
 [program:cliche-web]
 user=root
-directory=/opt/app/cliche/
+directory=/opt/app/cliche
 command=/opt/app/cliche/venv/bin/gunicorn -w 2 -t 180 -k gevent --pythonpath=. -b 0.0.0.0:8000 launchers.wsgi
-environment=PATH="/opt/app/cliche/venv/bin/",PYTHONPATH="/opt/app/"
+environment=PATH="/opt/app/cliche/venv/bin",PYTHONPATH="/opt/app/cliche"
 stdout_logfile=/var/log/cliche/cliche_web.log
 stderr_logfile=/var/log/cliche/cliche_web_error.log
 autostart=true
